# Rust101

./: .gitignore  Cargo.toml  README.md
benches/: comparison.rs
src/: blur.rs  effect.rs  game_of_life.rs  image_array.rs  invert.rs  lib.rs  main.rs  mandelbrot.rs  rle.rs  rotate.rs  seed.rs  strategy.rs  thread_data.rs
src/demonstrations/: borrow.rs  mod.rs
src/implementations/: mod.rs  parallel.rs  pool.rs  serial.rs  workers.rs
