[package]
name = "picture-lib"
version = "0.0.1"
edition = "2024"
authors = [
    "Lancelot Liu <me@lancy.dev>"
]
description = "Picture Processing Library Tutorial for COMP50007, reimplemented in Rust for teaching purposes."
readme = "README.md"
repository = "https://github.com/lancylot2004/RustPictureProcessing.git"
license = "MIT"
keywords = ["lifetimes", "concurrency"]

[dependencies]
# CLI: Derivation-based CLI generator.
clap = { version = "4.5.59", features = ["derive"] }

# Image: Utilities.
image = "0.25.9"

[[bin]]
name = "picture_lib"
path = "src/main.rs"
