[package]
name = "rust-102"
version = "0.0.1"
edition = "2024"
authors = [
    "Lancelot Liu <me@lancy.dev>"
]
description = "Picture Processing Library Tutorial for COMP50007, reimplemented in Rust for teaching purposes."
readme = "README.md"
repository = "https://github.com/lancylot2004/RustPictureProcessing.git"
license = "MIT"
keywords = ["lifetimes", "concurrency"]

[dependencies]
# CLI: Derivation-based CLI generator.
clap = { version = "4.5.59", features = ["derive"] }

# Rendering
minifb = "0.28.0"

# Rendering: Text
minifb_fonts = "0.1.3"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.8" }

[[bin]]
name = "render"
path = "src/main.rs"

[[bench]]
name = "comparison"
harness = false
